Tidying paths. Add vmin and vmax

--- a/src/notebooks/CHLa_indicator.ipynb
+++ b/src/notebooks/CHLa_indicator.ipynb
@@ -455,8 +455,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 21.8 s, sys: 15.4 s, total: 37.2 s\n",
-      "Wall time: 8min 47s\n"
+      "CPU times: user 13.6 s, sys: 2.83 s, total: 16.4 s\n",
+      "Wall time: 8min 21s\n"
      ]
     }
    ],
@@ -464,7 +464,7 @@
     "%%time\n",
     "\n",
     "# Save\n",
-    "out_nc_path = r'../../../shared/martini/light_chl_surf_test.nc'\n",
+    "out_nc_path = r'../../../../shared/martini/light_chl_surf_test.nc'\n",
     "ds.to_netcdf(out_nc_path)"
    ]
   },
@@ -474,7 +474,7 @@
    "source": [
     "### 2.3. Compare to Fram output\n",
     "\n",
-    "The code below reads the netCDF created above and the output from Fram and compared the results for a user-specified date."
+    "The code below reads the netCDF created above and the output from Fram and compares results for a user-specified time step."
    ]
   },
   {
@@ -499,8 +499,13 @@
     "# Date index of interest\n",
     "dt_idx = 0\n",
     "\n",
+    "# Use to adjust colourbar scale. Set to None to use full range of data\n",
+    "# on each subplot\n",
+    "vmin, vmax = None, None\n",
+    "\n",
     "# Read data\n",
-    "orig_nc_path = r'../../../shared/martini/martini800_v2_Chl_surf.nc'\n",
+    "orig_nc_path = r'../../../../shared/martini/martini800_v2_Chl_surf.nc'\n",
+    "out_nc_path = r'../../../../shared/martini/light_chl_surf_test.nc'\n",
     "orig_ds = xr.open_dataset(orig_nc_path)\n",
     "test_ds = xr.open_dataset(out_nc_path)\n",
     "\n",
@@ -509,8 +514,8 @@
     "for ax in axes:\n",
     "    ax.set_aspect('equal')\n",
     "    \n",
-    "orig_ds['light_Chl'].isel(ocean_time=dt_idx).plot(ax=axes[0])\n",
-    "test_ds['light_Chl'].isel(ocean_time=dt_idx).plot(ax=axes[1])\n",
+    "orig_ds['light_Chl'].isel(ocean_time=dt_idx).plot(ax=axes[0], vmin=vmin, vamx=vmax)\n",
+    "test_ds['light_Chl'].isel(ocean_time=dt_idx).plot(ax=axes[1], vmin=vmin, vamx=vmax)\n",
     "\n",
     "axes[0].set_title('Fram')\n",
     "axes[1].set_title('Thredds')\n",
@@ -533,7 +538,7 @@
     "\n",
     "The simple (and inefficient) approach to averaging over the top 10 m involves downloading data for all depth layers. This will increase the size of each Thredds request by a factor of 42, which is a bit large. Changing the \"chunking\" to consider one time step and 10 depth layers at a time should keep the overall request size similar to the example above (i.e. about 50 MB).\n",
     "\n",
-    "Note that this will take a while: the data transfer time should increase by a factor of ~42 as well, plus some additional overhead for the increased chunking (not to mention the actual processing). The example above took 8.5 minutes, so I'd expect this to take **at least 6 hours just for the data download**."
+    "Note that this will take a while: the data transfer time should increase by a factor of ~42, plus some additional overhead for the increased chunking (not to mention the actual processing). The example above took 8.5 minutes, so I'd expect this to take **at least 6 hours just for the data download**."
    ]
   },
   {
@@ -663,8 +668,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 5.25 µs\n"
+      "CPU times: user 4 µs, sys: 1 µs, total: 5 µs\n",
+      "Wall time: 11 µs\n"
      ]
     }
    ],
@@ -672,7 +677,7 @@
     "%%time\n",
     "\n",
     "# Save\n",
-    "out_nc_path = r'../../../../../../shared/martini/light_chl_upper_10m_test.nc'\n",
+    "out_nc_path = r'../../../../shared/martini/light_chl_upper_10m_test.nc'\n",
     "#ds.to_netcdf(out_nc_path)"
    ]
   }
