Now using CRS function again

--- a/src/R/read_nc.ipynb
+++ b/src/R/read_nc.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,8 +22,43 @@
       "Making 'packages.html' ... done\n",
       "Updating HTML index of packages in '.Library'\n",
       "Making 'packages.html' ... done\n",
+      "also installing the dependencies ‘gridExtra’, ‘crosstalk’, ‘png’, ‘viridis’\n",
+      "\n",
       "Updating HTML index of packages in '.Library'\n",
-      "Making 'packages.html' ... done\n"
+      "Making 'packages.html' ... done\n",
+      "Loading required package: dplyr\n",
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "Loading required package: ncdf4\n",
+      "Loading required package: ggplot2\n",
+      "Loading required package: raster\n",
+      "Loading required package: sp\n",
+      "\n",
+      "Attaching package: ‘raster’\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    select\n",
+      "\n",
+      "Loading required package: leaflet\n",
+      "Loading required package: rgdal\n",
+      "rgdal: version: 1.4-4, (SVN revision 833)\n",
+      " Geospatial Data Abstraction Library extensions to R successfully loaded\n",
+      " Loaded GDAL runtime: GDAL 2.4.2, released 2019/06/28\n",
+      " Path to GDAL shared files: /opt/conda/share/gdal\n",
+      " GDAL binary built with GEOS: TRUE \n",
+      " Loaded PROJ.4 runtime: Rel. 6.1.0, May 15th, 2019, [PJ_VERSION: 610]\n",
+      " Path to PROJ.4 shared files: /opt/conda/share/proj\n",
+      " Linking to sp version: 1.3-1 \n"
      ]
     }
    ],
@@ -49,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +226,7 @@
    "source": [
     "# load the 'blank' raster file\n",
     "r <- raster(\"blank_raster.tif\")\n",
-    "crs(r)<-showP4(showWKT(\"+init=epsg:3035\"))\n",
+    "crs(r)<-CRS(\"+init=epsg:3035\")\n",
     "\n",
     "# rasterize the MARTINI data to raster r\n",
     "x <- rasterize(df[, 1:2], r, df[,4], fun=mean)\n",
@@ -202,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
