Switch to absolute file paths. Remove installation of R packages as no longer necessary

--- a/src/notebooks/CHLa_indicator.ipynb
+++ b/src/notebooks/CHLa_indicator.ipynb
@@ -1094,7 +1094,7 @@
     "%%time\n",
     "\n",
     "# Save\n",
-    "out_nc_path = r'../../../../shared/martini/light_chl_surf_test.nc'\n",
+    "out_nc_path = r'~/shared/martini/light_chl_surf_test.nc'\n",
     "ds.to_netcdf(out_nc_path)"
    ]
   },
@@ -1134,8 +1134,8 @@
     "vmin, vmax = None, None\n",
     "\n",
     "# Read data\n",
-    "orig_nc_path = r'../../../../shared/martini/martini800_v2_Chl_surf.nc'\n",
-    "out_nc_path = r'../../../../shared/martini/light_chl_surf_test.nc'\n",
+    "orig_nc_path = r'~/shared/martini/martini800_v2_Chl_surf.nc'\n",
+    "out_nc_path = r'~/shared/martini/light_chl_surf_test.nc'\n",
     "orig_ds = xr.open_dataset(orig_nc_path)\n",
     "test_ds = xr.open_dataset(out_nc_path)\n",
     "\n",
@@ -1498,7 +1498,7 @@
     "%%time\n",
     "\n",
     "# Save\n",
-    "out_nc_path = r'../../../../shared/martini/light_chl_upper_10m_test.nc'\n",
+    "out_nc_path = r'~/shared/martini/light_chl_upper_10m_test.nc'\n",
     "ds.to_netcdf(out_nc_path)"
    ]
   },
@@ -1547,9 +1547,9 @@
     "vmin, vmax = None, None\n",
     "\n",
     "# Read data\n",
-    "orig_nc_path = r'../../../../shared/martini/martini800_v2_Chl_surf.nc'\n",
-    "new_nc_path = r'../../../../shared/martini/light_chl_surf_test.nc'\n",
-    "avg_nc_path = r'../../../../shared/martini/light_chl_upper_10m_test.nc'\n",
+    "orig_nc_path = r'~/shared/martini/martini800_v2_Chl_surf.nc'\n",
+    "new_nc_path = r'~/shared/martini/light_chl_surf_test.nc'\n",
+    "avg_nc_path = r'~/shared/martini/light_chl_upper_10m_test.nc'\n",
     "\n",
     "orig_ds = xr.open_dataset(orig_nc_path)\n",
     "new_ds = xr.open_dataset(new_nc_path)\n",
