--- a/src/R/read_nc.ipynb
+++ b/src/R/read_nc.ipynb
@@ -18,14 +18,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Updating HTML index of packages in '.Library'\n",
-      "Making 'packages.html' ... done\n",
-      "Updating HTML index of packages in '.Library'\n",
-      "Making 'packages.html' ... done\n",
-      "also installing the dependencies ‘gridExtra’, ‘crosstalk’, ‘png’, ‘viridis’\n",
-      "\n",
-      "Updating HTML index of packages in '.Library'\n",
-      "Making 'packages.html' ... done\n",
       "Loading required package: dplyr\n",
       "\n",
       "Attaching package: ‘dplyr’\n",
@@ -63,10 +55,6 @@
     }
    ],
    "source": [
-    "install.packages(\"ncdf4\")\n",
-    "install.packages(\"raster\")\n",
-    "install.packages(\"leaflet\")\n",
-    "\n",
     "require(dplyr)\n",
     "require(ncdf4)\n",
     "require(ggplot2)\n",
@@ -126,15 +114,14 @@
    "source": [
     "# define function parameters for Chl\n",
     "\n",
-    "ncfile=\"../../../shared/martini/martini800_v2_Chl_surf.nc\"\n",
+    "ncfile=\"~/shared/martini/martini800_v2_Chl_surf.nc\"\n",
     "statistic=\"90pc\"\n",
     "timesteps=c(1:364)\n",
     "varno=5\n",
     "unitfactor=1\n",
     "\n",
     "# call the function\n",
-    "df <- read_nc(ncfile, statistic, timesteps, varno, unitfactor)\n",
-    "\n"
+    "df <- read_nc(ncfile, statistic, timesteps, varno, unitfactor)"
    ]
   },
   {
@@ -204,12 +191,12 @@
     "\n",
     "# join the dataframe to positions in EPSG3035\n",
     "df <- df_points %>%\n",
-    "  left_join(df,by=\"ID\")\n"
+    "  left_join(df,by=\"ID\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +229,7 @@
    "outputs": [],
    "source": [
     "# save the raster file\n",
-    "rasterfile=\"../../../shared/martini/Chl_surf.grd\"\n",
+    "rasterfile=\"~/shared/martini/Chl_surf.grd\"\n",
     "rf <- writeRaster(x, filename=rasterfile,overwrite=TRUE)"
    ]
   }
